@@ -1,6 +1,17 @@
 <html><body>
-Dragging in the text area with the middle mouse button
+<p>Dragging in the text area with the middle mouse button
 creates a selection without moving the
 caret. As soon as the mouse button is released, the selected text is
-inserted at the caret position and the selection is deactivated.
+inserted at the caret position and the selection is deactivated.</p>
+
+<p>This feature has two additional, more suttle behaviors:</p>
+
+<ul>
+<li>If there already is a selection when you start middle-dragging, the selection
+will be replaced with the region you marked with the mouse.</li>
+<li>Holding down <b>Control</b> while dragging the middle mouse button marks a
+rectangular area, and pastes it vertically at the caret location (or into the
+current selection).</li>
+</ul>
+
 </body></html>
